<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/email"
            android:inputType="textWebEmailAddress"/>
        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/password"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button_style_final"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            android:id="@+id/login"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/button_style_final"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            android:id="@+id/register"
            android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </LinearLayout>





</LinearLayout>