<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:background="@drawable/image_style"
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="27dp"
                android:layout_marginStart="40dp"
                tools:srcCompat="@tools:sample/avatars"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:theme="@style/names"
                    android:id="@+id/doctor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="50dp"
                    android:textSize="20dp"
                    android:layout_marginTop="27dp"
                    android:text="@string/name" />

                <TextView
                    android:theme="@style/description"
                    android:id="@+id/doctor_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="50dp"
                    android:textSize="18sp"

                    android:layout_marginTop="5dp"
                    android:text="@string/description" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffd5d5d5"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:theme="@style/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/about" />

            <TextView
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_width="280dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:text="@string/hospital_description"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/addressTime"
                    android:theme="@style/about" />

                <TextView
                    android:id="@+id/doctor_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="25dp"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/extended_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="25dp"
                    android:textSize="18sp"
                    android:theme="@style/content" />

                <!--            <View-->
                <!--                android:layout_width="500dp"-->
                <!--                android:layout_height="1dp"-->
                <!--                android:layout_marginTop="8dp"-->
                <!--                android:background="#ffd5d5d5" />-->

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rating_of_doctors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/certificate"
                    android:theme="@style/about" />


                <TextView
                    android:id="@+id/certis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/certificate1"
                    android:theme="@style/content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/certificate2"
                    android:theme="@style/content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/certificate3"
                    android:theme="@style/content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/certificate4"
                    android:theme="@style/content" />


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#ffd5d5d5" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/map"
                    android:theme="@style/about" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/viewonmap"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="-2dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_style_final"
                        android:text="@string/routes"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/view_nearby_facilities"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="-2dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_style_final"
                        android:text="Other Nearby Facilities"
                        android:textSize="10sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/view_beds"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="-2dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_style_final"
                        android:text="@string/beds"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/view_infra"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="-2dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="10sp"
                        android:text="@string/infra"
                        android:background="@drawable/button_style_final"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            tools:context=".Reviews_Hospital">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/review_hospital"
                android:scrollbars="none"></ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="1"
                android:isIndicator="false"
                android:id="@+id/review_rating_edit"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:background="@drawable/button_style_final"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>