<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:background="@drawable/image_style"
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="27dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/bloodbank"
            tools:srcCompat="@tools:sample/avatars"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:theme="@style/names"
                android:id="@+id/bloodbank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="50dp"
                android:textSize="20dp"
                android:layout_marginTop="27dp"
                android:text="@string/name" />

            <TextView
                android:theme="@style/description"
                android:id="@+id/bloodbank_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="50dp"
                android:textSize="18sp"

                android:layout_marginTop="5dp"
                android:text="@string/description" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffd5d5d5"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:theme="@style/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/about" />

        <TextView
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:text="Pharmacy"/>
    </LinearLayout>


    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffd5d5d5"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:theme="@style/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/addressTime"/>

        <TextView
            android:theme="@style/content"
            android:id="@+id/bloodbank_address"
            android:layout_marginTop="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/extended_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:text="extended"
            android:theme="@style/content" />
    </LinearLayout>


        <View
            android:layout_marginTop="8dp"
            android:layout_width="500dp"
            android:layout_height="1dp"
            android:background="#ffd5d5d5"/>


        <View
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffd5d5d5"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:theme="@style/about"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"/>

            <Button
                android:id="@+id/viewonmap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-2dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="5dp"
                android:textSize="10sp"
                android:text="@string/routes"/>

        </LinearLayout>

</LinearLayout>